# init-manifolds

./: .gitignore  Plan.md  README.md  convex_envelope.py  projected_envelope.py  pyproject.toml  requirements.txt  test_convex_envelope.py  test_demos.py  test_edge_cases.py  test_projected_envelope.py
.claude/: settings.local.json
examples/: demos.py
src/: __init__.py
src/envelope/: __init__.py
src/envelope/core/: __init__.py  geometry.py
src/envelope/envelopes/: __init__.py  concave.py  single_crossing.py
src/envelope/projection/: __init__.py  pca.py  projected_envelope.py
src/envelope/visualization/: __init__.py  plotting.py
tests/: __init__.py  test_concave.py  test_edge_cases.py  test_envelope_comparison.py  test_geometry.py  test_projection.py  test_single_crossing.py
